# wazanerlingara

./: README.md  data-collection.json
.github/workflows/: ci.yml  client-ci.yml  client-codeql.yml  server-ci.yml  server-codeql.yml
ai/: .env.example  README.md  agent_api.py  agent_main.py  main.py  pyproject.toml
ai/agents/: agent_1.py  agent_2.py  imposter_agent.py  player_agent.py
ai/config/: database.py
ai/models/: groq_llm.py  model_work.py
ai/notebook/: agent.ipynb  generate_work.ipynb
ai/prompts/: agent1_prompt.py  agent2_prompt.py  imposter_prompt.py  round_prompt.py
ai/schema/: schema.py
client/: README.md  biome.json  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
client/dev-dist/: sw.js
client/src/: main.tsx
learning/: README.md
learning/backend/: README.md  package.json
learning/chat-app/: README.md  install-both.bat  run-both.bat  run-both.sh  stop-both.bat  stop-both.sh
learning/frontend/: README.md  angular.json  package.json  tsconfig.json
mobile/: README.md  app.json  biome.json  data-collection.json  eas.json  eslint.config.js  image.d.ts  package-lock.json  package.json  tailwind.config.js
mobile/app/: +not-found.tsx  _layout.tsx  categories.tsx  contact.tsx  game-play.tsx  game-setting.tsx  how-to-play.tsx  index.tsx  loading.tsx  mode.tsx  onboarding.tsx  privacy.tsx  role-reveal.tsx  setting.tsx  spinner-screen.tsx  start.tsx  test-screen.tsx  vote-result.tsx  vote-transition.tsx  vote.tsx
mobile/components/: back-button.tsx  delete-button.tsx  (+5 more)
server/: README.md  package.json
(+227 files in other folders)
