[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "langsmith>=0.7.10",
    "mlflow>=3.10.0",
    "openai>=2.24.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "uvicorn>=0.41.0",
]
