[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langsmith>=0.7.10",
    "mlflow>=3.10.0",
    "msgpack>=1.1.2",
    "openai>=2.24.0",
    "psycopg2-binary>=2.9.11",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "uvicorn>=0.41.0",
]
